--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,16 @@ services:
     ports:
       - "8080:8080"
     container_name: api-gateway
+
+  frontend:
+    container_name: frontend
+    image: frontend
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "5173:3000"
+    env_file:
+      - frontend/.env.production
+    depends_on:
+      - api-gateway
