--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ click==8.2.0
 colorama==0.4.6
 filelock==3.18.0
 Flask==3.1.1
+flask-cors==6.0.0
 fsspec==2025.3.2
 itsdangerous==2.2.0
 Jinja2==3.1.6
