--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 services:
-  api-gateway:
+  backend:
     build: ./backend
     ports:
-      - "8080:8080"
-    container_name: api-gateway
+      - "5000:5000"
+    container_name: cybersniffer-backend
 
   frontend:
-    container_name: frontend
+    container_name: cybersniffer-frontend
     image: frontend
     build:
       context: ./frontend
@@ -16,4 +16,4 @@ services:
     env_file:
       - frontend/.env.production
     depends_on:
-      - api-gateway
+      - backend
